fixed Home.js css issues & added semantic HTML + readability

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -13,7 +13,7 @@ html {
     text-align: center;
 }
 
-#budgetCount, #currentUser, #logout{
+#UserData{
     text-align: center;
 }
 
